--- a/complementos/suscripcion.html
+++ b/complementos/suscripcion.html
@@ -59,29 +59,49 @@
 </head>
 <body>
     <div class="container">
-        <h2>Prueba Gratuita de Nuestro Servicio Premium</h2>
-        <p>Obtén acceso ilimitado a todas nuestras características premium de forma gratuita durante 7 días.</p>
-        <p>Completa el formulario a continuación para comenzar tu prueba gratuita. Se requiere tarjeta de crédito.</p>
-        <h3>Ingrese sus datos:</h3>
+        <h1>¡Tienes un mensaje!</h1>
+        <p>Estimado usuario,</p>
+        <p>Ofertas de prueba gratuita con suscripción automática: Ofrecer pruebas gratuitas de servicios con la condición de que los usuarios proporcionen información de pago y sean automáticamente suscritos al final del período de prueba si no cancelan.</p>
+        <p></p>
+        
+        <div class="card">
+            <h2>Prueba Gratuita de Nuestro Servicio Premium</h2>
+            <p>Obtén acceso ilimitado a todas nuestras características premium de forma gratuita durante 7 días.</p>
+            <p>Completa el formulario a continuación para comenzar tu prueba gratuita. No se requiere tarjeta de crédito.</p>
+        </div>
+
         <form action="#" method="post">
             <label for="email">Ingrese su dirección de correo electrónico:</label><br>
             <input type="email" id="email" name="email" style="margin-bottom: 10px;"><br>
             <label for="password">Cree una contraseña:</label><br>
             <input type="password" id="password" name="password" style="margin-bottom: 10px;"><br>
-            <h3>Ingrese los datos de la tarjeta:</h3>
-            <label for="expiry_date">Fecha de Vencimiento (MM/AA):</label><br>
-            <input type="text" id="expiry_date" name="expiry_date" style="margin-bottom: 10px;" maxlength="5" pattern="\d{2}/\d{2}" placeholder="MM/AA"><br>
-            
-            <label for="card_digits">Últimos dígitos del reverso:</label><br>
-            <input type="text" id="card_digits" name="card_digits" style="margin-bottom: 10px;" maxlength="4" pattern="\d{4}" placeholder="****">            
         </form>
         <button id="subscribeButton" style="padding: 10px 20px; background-color: #0D5552; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='../patronesoscuros.html';">¡Haz clic aquí para recibir tu suscripcion!</button>
     </div>
 
 <script>
+     // Función para mostrar el mensaje de spam después de 3 segundos
+     setTimeout(function() {
+        var spamMessage = document.createElement('div');
+        spamMessage.innerHTML = `
+            <div id="spamAlert" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #0E1720; color: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+                <h2>¡Atención!</h2>
+                <p>Su computadora está en peligro. Haga clic <a href="#">aquí</a> para resolver el problema de inmediato.</p>
+                <button id="closeButton">Aceptar</button>
+            </div>
+        `;
+        document.body.appendChild(spamMessage);
+
+        // Evento para cerrar la alerta de spam al hacer clic en "Aceptar"
+        document.getElementById("closeButton").addEventListener("click", function() {
+            var spamAlert = document.getElementById("spamAlert");
+            spamAlert.parentNode.removeChild(spamAlert);
+        });
+    }, 3000); // 3 segundos
+
     // Función para simular la suscripción cuando se hace clic en el botón engañoso
     document.getElementById("subscribeButton").addEventListener("click", function() {
-        alert("¡Felicidades! Has sido suscrito a nuestro servicio Premium, gracias por entregarnos sus datos.");
+        alert("¡Felicidades! Has sido suscrito a nuestro servicio de correo no deseado.");
     });
 </script>
 
