ajuste de diagramación patrones

--- a/que_buscamos.html
+++ b/que_buscamos.html
@@ -38,6 +38,15 @@
                         </p>
 
                 <h1>QUE BUSCAMOS</h1>
+                <div class="container-img">
+                    <img src="img/paso1comoconoceralusuario.png" width="250px">
+                    <img src="img/paso2acomoconoceralusuario.png"width="250px"> 
+                  </div>
+                  <div class="container-imagen">
+                      <img src="img/paso3comoconoceralusuario.png" width="250px">
+                      <img src="img/paso4comoconoceralusuario.png"width="250px" > 
+                    </div>
+                  </div>
                 <div class="container-img" id="img_center">
                     <img src="img/1.2 Quiénes Somos (Metas y Servicios) (2).png" width="800px">
                   </div>
