ajustes de diagramación

--- a/que_buscamos.html
+++ b/que_buscamos.html
@@ -38,18 +38,21 @@
                         </p>
 
                 <h1>QUE BUSCAMOS</h1>
-                <div class="container-img">
-                    <img src="img/paso1comoconoceralusuario.png" width="250px">
-                    <img src="img/paso2acomoconoceralusuario.png"width="250px"> 
-                  </div>
-                  <div class="container-imagen">
-                      <img src="img/paso3comoconoceralusuario.png" width="250px">
-                      <img src="img/paso4comoconoceralusuario.png"width="250px" > 
+                <div class="container">
+                    <div class="d-flex justify-content-center">
+                        <div class="container-img">
+                            <img src="img/QUIENESSOMOSICONO1.png" width="200px" class="mr-10">
+                            <img src="img/QUIENESSOMOSICONO2.png" width="200px" class="mr-10"> 
+                            <img src="img/QUIENESSOMOSICONO3.png" width="200px" class="mr-10"> 
+                        </div>
                     </div>
-                  </div>
-                <div class="container-img" id="img_center">
-                    <img src="img/1.2 Quiénes Somos (Metas y Servicios) (2).png" width="800px">
-                  </div>
+                    <div class="d-flex justify-content-center">
+                        <div class="container-imagen">
+                            <img src="img/QUIENESSOMOSICONO4.png" width="200px" class="mr-3">
+                            <img src="img/QUIENESSOMOSICONO5.png" width="200px" class="mr-3"> 
+                            <img src="img/QUIENESSOMOSICONO6.png" width="200px" class="mr-3"> 
+                        </div>
+                    </div>
                 </div>
         </main>
     <!-- footer  -->
