--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,16 +1,16 @@
 <footer>
-    <div class="container" id="footer">
-        <div class="row">
-            <div class="col-4">
-                <h3>NodeUx</h3>
-                <p>Nuestra misión es informar a los usuarios sobre los patrones 
-                    oscuros y los tipos que existen para evitar que 
-                    caigan en estos.</p>
-                    <img src="img/correo.png" alt="Botones del footer" id="BOTONredessociales">
-                    <a class="vc_icon_element-link" href="https://www.instagram.com/archivadocs/" rel="nofollow" title="Instagram nuclio digital school" target="_blank">
-                    <img src="img/instagram.png" alt="Botones del footer" id="BOTONredessociales2">
-                    </a>    
-            </div>
+    <div class="container footer" id="footer">
+        <h3>NodeUx</h3>
+        <p>
+            Nuestra misión es informar a los usuarios sobre los patrones 
+            oscuros y los tipos que existen para evitar que 
+            caigan en estos.
+        </p>
+        <div class="container iconos">
+            <img src="img/correo.png" alt="Botones del footer" id="BOTONredessociales">
+            <a class="vc_icon_element-link" rel="nofollow" title="Instagram nuclio digital school" target="_blank">
+            <img src="img/instagram.png" alt="Botones del footer" id="BOTONredessociales2" >
+            </a>    
         </div>
     </div>
 </footer>
