--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h2><a href="patrones.html" class="link-sin-estilo">PATRONES</a></h2>
             </div>
             <div class="container" >
-                <h2><a href="patronesoscuros.html" class="link-sin-estilo">PATRONES OSCUROS</a></h2>
+                <h2><a href="patronesoscuros.html" class="link-sin-estilo">PATRONES<br>OSCUROS</a></h2>
             </div>
         </div>
         <!-- Nuestro objetivo -->
