--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -43,7 +43,7 @@
                 </p>
             </div>
         <!-- CATEGORÍAS -->        
-        <h2 id="area">ÁREAS</h2>
+        <h2 id="area">Categorias</h2>
         <!-- FILA 1 -->
         <div class="row container_doble d-flex">
             <div class="col-3" id="bock_click" data-target="contenido-1">
