--- a/que_buscamos.html
+++ b/que_buscamos.html
@@ -27,7 +27,7 @@
         <div class="rectangulopestaña"></div>
         <div class="container justify-content-between" id="container_principal"> 
             <a href="index.html" class="close-button">x</a>
-            <div class="container">
+            <div class="container" id="quienes_somos">
                 <h1>QUIÉNES SOMOS</h1>
                 <p>Somos ArchivaDOCS, una oficina de Diseño enfocada en las áreas de 
                         Interacción y Servicio con la visión de la Escuela de Arquitectura 
@@ -38,16 +38,14 @@
                         </p>
 
                 <h1>QUE BUSCAMOS</h1>
-                <div class="container">
-                    <div class="d-flex justify-content-center">
+                <div class="container" id="que_buscamos">
+                    <div class="d-block justify-content-center">
                         <div class="container-img">
                             <img src="img/QUIENESSOMOSICONO1.png" width="200px" class="mr-10">
                             <img src="img/QUIENESSOMOSICONO2.png" width="200px" class="mr-10"> 
                             <img src="img/QUIENESSOMOSICONO3.png" width="200px" class="mr-10"> 
                         </div>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <div class="container-imagen">
+                        <div class="container-img">
                             <img src="img/QUIENESSOMOSICONO4.png" width="200px" class="mr-3">
                             <img src="img/QUIENESSOMOSICONO5.png" width="200px" class="mr-3"> 
                             <img src="img/QUIENESSOMOSICONO6.png" width="200px" class="mr-3"> 
