--- a/complementos/interumpir_noticia.html
+++ b/complementos/interumpir_noticia.html
@@ -67,9 +67,9 @@
         </div>
         <!-- Tarjeta de Publicación en Redes Sociales -->
         <div class="card" style="display: none;" id="descubrimiento">
-            <h2>¡Nuevo Descubrimiento!</h2>
-            <p>¡Miren lo que encontré! Este producto es increíble y ha cambiado mi vida.</p>
-            <button id="subscribeButton" style="padding: 10px 20px; background-color: gray; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="openAlertDos()">No me interesa</button>
+            <h2>¡Nuevos Audifonos Pear Air 4!</h2>
+            <p>¡La novedad del año! Este producto es increíble! Tienes que provarlos.</p>
+            <button id="subscribeButton" style="padding: 10px 20px; background-color: gray; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="openAlertDos()">Leer noticia.</button>
             <button id="subscribeButton" style="padding: 10px 20px; background-color: #0D5552; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='../patronesoscuros.html';">¡Ver producto!</button>
         </div>
 
@@ -79,16 +79,8 @@
                 <p>El producto más viral de internet resive ¡UN DESCUENTO!
                 </p>
                 <p>Aprovecha, solo por HOY un 30% de descuento!</p>
-                <button id="subscribeButton" style="padding: 10px 20px; background-color: gray; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="openAlertTres()">No me interesa</button>
+                <button id="subscribeButton" style="padding: 10px 20px; background-color: gray; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='../patronesoscuros.html';">Leer noticia.</button>
                 <button id="subscribeButton" style="padding: 10px 20px; background-color: #0D5552; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='../patronesoscuros.html';">¡Ver descuento!</button>
-        </div>
-
-        <!-- Tarjeta de Contenido de Marca en Blogs -->
-        <div class="card" style="display: none;" id="marca">
-            <h2>Los 10 beneficios sorprendentes de usar XYZ</h2>
-            <p>Descubre por qué XYZ es el mejor producto del mercado y cómo puede mejorar tu vida.</p>
-            <button id="subscribeButton" style="padding: 10px 20px; background-color: gray; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='../patronesoscuros.html';">No me interesa</button>
-            <button id="subscribeButton" style="padding: 10px 20px; background-color: #0D5552; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='../patronesoscuros.html';">¡Ver producto!</button>
         </div>
     </div>
 
