--- a/diseñouxyui.html
+++ b/diseñouxyui.html
@@ -36,7 +36,7 @@
                     la tipografía, logo, íconos, paleta de colores, botones, etc. Además, de forma no visible, podemos interiorizar 
                     en el uso de grillas que permiten que la información expuesta dentro de la interfaz, se lea de una forma legible.</p>
 
-                <div class="container d-flex align-items-center justify-content-center cuadrospequenyos">
+                <div class="container d-flex align-items-center justify-content-center cuadrospequenyos" id="cuadrospequenyos">
                     <button type="button" class="btn btn-outline-secondary">User Experience</button>
                     <button type="button" class="btn btn-outline-secondary">Usabilidad</button>
                     <button type="button" class="btn btn-outline-secondary">Navegación</button>
@@ -51,7 +51,7 @@
                     Por medio de este se puede observar cómo se desenvuelve el usuario con las diferentes propuestas, 
                     siendo parte de un desarrollo el cual da paso a la mejora en cuanto a calidad de la interacción, 
                     centrándose más que nada en la sensación de la experiencia. </p>
-                <div class="container d-flex align-items-center justify-content-center cuadrospequenyos">
+                <div class="container d-flex align-items-center justify-content-center cuadrospequenyos" id="cuadrospequenyos">
                     <button type="button" class="btn btn-outline-secondary">Gráfica</button>
                     <button type="button" class="btn btn-outline-secondary">Interfaz</button>
                     <button type="button" class="btn btn-outline-secondary">HTML</button>
