--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -229,8 +229,8 @@
             <p>Estas son una estrategia de publicidad donde al abrir una página o al interactuar dentro de su interfaz se abren instantáneamente ventanas publicitarias de dudosa procedencia y que dificultan la navegación.
             </p>
             <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo32">
-                <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal">
-                    ¡HAZ CLICK Y AYUDA A LOS NIÑOS POBRES!
+                <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" onclick="window.location.href='complementos/interumpir_noticia.html';">
+                    Leer Noticia
                 </button>
             </div>
         </div>
