--- a/investigacióndeusuario.html
+++ b/investigacióndeusuario.html
@@ -45,7 +45,7 @@
                     Definir - Desarrollar - Entregar.
                     </p>
                 <div class="container-img">
-                    <img src="img/Doble diamante.png" width="600px">
+                    <img src="img/Doble diamante.png" width="600px" id="img_DUS">
                 </div>
             </div>
 
@@ -79,7 +79,7 @@
                      para garantizar que este cumpla con los objetivos propuestos.
                     </p>
                     <div class="container-img">
-                        <img src="img/2.3.3   Diseñar una Solución.png" width="600px">
+                        <img src="img/2.3.3   Diseñar una Solución.png" width="600px" id="img_DUS">
                       </div>
                 </div>
             </div>
