--- a/footer/footer.html
+++ b/footer/footer.html
@@ -8,10 +8,9 @@
         </p>
         <div class="container iconos">
             <img src="img/correo.png" alt="Botones del footer" id="BOTONredessociales">
-            <a class="vc_icon_element-link" rel="nofollow" title="Instagram nuclio digital school" target="_blank">
+            <a class="vc_icon_element-link" href="https://www.instagram.com/archivadocs/" rel="nofollow" title="Instagram nuclio digital school" target="_blank">
             <img src="img/instagram.png" alt="Botones del footer" id="BOTONredessociales2" >
             </a>    
-        </div>
     </div>
 </footer>
 
