--- a/complementos/anuncios_disfrazados.html
+++ b/complementos/anuncios_disfrazados.html
@@ -83,7 +83,7 @@
             <p>Descubre por qué XYZ es el mejor producto del mercado y cómo puede mejorar tu vida.</p>
             <button onclick="closeAlert(this)">Cerrar</button>
         </div>
-        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" onclick="window.location.href='../patronesoscuros.html';">Leer Noticia</button> 
+        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" onclick="window.location.href='../patronesoscuros.html';">Salir</button> 
 
     </div>
 
