--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -229,7 +229,7 @@
             <p>Estas son una estrategia de publicidad donde al abrir una página o al interactuar dentro de su interfaz se abren instantáneamente ventanas publicitarias de dudosa procedencia y que dificultan la navegación.
             </p>
             <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo32">
-                <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" onclick="window.location.href='complementos/interumpir_noticia.html';">
+                <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" onclick="window.location.href='complementos/anuncios_disfrazados.html';">
                     Leer Noticia
                 </button>
             </div>
@@ -297,7 +297,7 @@
             <p>Se seduce al usuario a suscribirse a un servicio mediante una oferta o un producto de regalo, sin embargo, tienden a requerir una condición oculta que se descubre después de haberse suscrito.
             </p>
             <div class="container d-flex align-items-center justify-content-center" id="cuadro_interactivo5">
-                <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" onclick="window.location.href='complementos/regaloSuscríbete.html';">¡Haz clic aquí para recibir REGALO!</button>
+                <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" onclick="window.location.href='complementos/regaloSuscríbete.html';">¡Suscríbete y recibe un REGALO!</button>
             </div>
 
             <h3>Prueba gratuita de nuestro servicio premium.</h3>
