--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -50,6 +50,7 @@
         </div>
         <!-- CATEGORÍAS -->        
         <h2 id="categorias">CATEGORÍAS</h2>
+        <p>!Cada categoría tiene dos interacciones con las que puedes experimentar los distintos patrones oscuros!</p>
 
         <!-- FILA1 -->
         <div class="row container_doble d-flex">
