--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- nav barra -->
     <div id="nav"></div>
     <main>
+        <p>Visualiza cómo se conectan los distintos conceptos que abordaremos a lo largo de esta web</p>
         <!-- rectangulos -->
         <div class="container rectangulo d-flex align-items-center justify-content-center" id="p5-container"></div>
 
@@ -37,7 +38,6 @@
         <div class="container-fluid" id="franja_1">
             <h2>¿QUÉ ES EL DISEÑO?</h2>
         </div>
-
         <!-- texto central -->
             <div class="container justify-content-center text-center" id="textocentral">
                 <p>El diseño se define como una disciplina la cual se encarga de comunicar a través de diferentes elementos visuales/interactivos 
