--- a/nav/nav2.html
+++ b/nav/nav2.html
@@ -6,9 +6,7 @@
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_acerca">ACERCA DE</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="../quienes_somos.html">¿Quiénes somos? </a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="../que_buscamos.html">¿Qué buscamos?</a></li>
+                    <li><a class="dropdown-item" href="../que_buscamos.html">¿Quiénes somos? </a></li>
                 </ul>
             </div>
         </div>
