--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- nav barra -->
     <div id="nav"></div>
     <main>
-        <p>Visualiza cómo se conectan los distintos conceptos que abordaremos a lo largo de esta web</p>
+        <p id="texto_inicial">Visualiza cómo se conectan los distintos conceptos que abordaremos a lo largo de esta web</p>
         <!-- rectangulos -->
         <div class="container rectangulo d-flex align-items-center justify-content-center" id="p5-container"></div>
 
