--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -26,7 +26,9 @@
     <div id="nav2"></div>
     <main class="main">
     <!-- cuadro principal -->
-    <div class="rectangulopestaña"></div>
+    <div class="container justify-content-between" style="padding: 0;">
+        <div class="rectangulopestaña"></div>
+    </div>
     <div class="container justify-content-between" id="container_principal"> 
         <!-- descripcion -->
         <div class="container" id="descripcion">
@@ -48,10 +50,11 @@
                    para considerar si es factible la implementación de estos elementos en sus interfaces.
                 </p>
         </div>
-        <!-- CATEGORÍAS -->        
-        <h2 id="categorias">CATEGORÍAS</h2>
-        <p>¡Cada categoría tiene dos interacciones con las que puedes experimentar los distintos patrones oscuros!</p>
-
+        <!-- CATEGORÍAS -->
+        <div class="container categorias" id="categorias">
+            <h2>CATEGORÍAS</h2>
+            <p>¡Cada categoría tiene dos interacciones con las que puedes experimentar los distintos patrones oscuros!</p>
+        </div>
         <!-- FILA1 -->
         <div class="row container_doble d-flex">
             <div class="col-3" id="bock_click1" data-target="contenido-manipulacion">
