--- a/que_buscamos.html
+++ b/que_buscamos.html
@@ -22,9 +22,10 @@
 <body>
     <!-- nav barra -->
     <div id="nav2"></div>
-    
     <main class="main">
-        <div class="rectangulopestaña"></div>
+        <div class="container justify-content-between" style="padding: 0;">
+            <div class="rectangulopestaña"></div>
+        </div>
         <div class="container justify-content-between" id="container_principal"> 
             <a href="index.html" class="close-button">x</a>
             <div class="container" id="quienes_somos">
@@ -41,18 +42,20 @@
                 <div class="container" id="que_buscamos">
                     <div class="d-block justify-content-center">
                         <div class="container-img">
-                            <img src="img/QUIENESSOMOSICONO1.png" width="200px" class="mr-10">
-                            <img src="img/QUIENESSOMOSICONO2.png" width="200px" class="mr-10"> 
-                            <img src="img/QUIENESSOMOSICONO3.png" width="200px" class="mr-10"> 
+                            <img src="img/QUIENESSOMOSICONO1.png" alt="imagen" width="200px" class="mr-10">
+                            <img src="img/QUIENESSOMOSICONO2.png" alt="imagen" width="200px" class="mr-10"> 
+                            <img src="img/QUIENESSOMOSICONO3.png" alt="imagen" width="200px" class="mr-10"> 
                         </div>
                         <div class="container-img">
-                            <img src="img/QUIENESSOMOSICONO4.png" width="200px" class="mr-3">
-                            <img src="img/QUIENESSOMOSICONO5.png" width="200px" class="mr-3"> 
-                            <img src="img/QUIENESSOMOSICONO6.png" width="200px" class="mr-3"> 
+                            <img src="img/QUIENESSOMOSICONO4.png" alt="imagen" width="200px" class="mr-3">
+                            <img src="img/QUIENESSOMOSICONO5.png" alt="imagen" width="200px" class="mr-3"> 
+                            <img src="img/QUIENESSOMOSICONO6.png" alt="imagen" width="200px" class="mr-3"> 
                         </div>
                     </div>
                 </div>
-        </main>
+            </div>
+        </div>
+    </main>
     <!-- footer  -->
     <div id="footer"></div>
     
