--- a/investigacióndeusuario.html
+++ b/investigacióndeusuario.html
@@ -24,8 +24,9 @@
     <div id="nav2"></div>
 
     <main class="main">
-        <!-- cuadro principal -->
-        <div class="rectangulopestaña"></div>
+        <div class="container justify-content-between" style="padding: 0;">
+            <div class="rectangulopestaña"></div>
+        </div>
         <div class="container justify-content-between" id="container_principal"> 
             <a href="index.html" class="close-button">x</a>
             <div class="container-fluid" id="container_descripcion">
