--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -26,8 +26,9 @@
     <!-- nav barra -->
     <div id="nav2"></div>
     <main class="main">
-        <!-- cuadro principal -->
-        <div class="rectangulopestaña"></div>
+        <div class="container justify-content-between" style="padding: 0;">
+            <div class="rectangulopestaña"></div>
+        </div>
         <div class="container justify-content-between" id="container_principal"> 
             <a href="index.html" class="close-button">x</a>
             <!-- descripcion -->
